--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,7 @@
     --font-size-card: 0.8rem;
     --font-size-text-big: 1.25rem;
     --color-text-purple: rgb(151, 151, 218);
-    --color-text-purple-dark: rgb(89, 89, 139);
+    /* --color-text-purple-dark: rgb(89, 89, 139); */
     --color-text-grey: rgba(116, 116, 116, 0.808);
     --color-text-white: whitesmoke;
     --color-text-yellow: rgb(215, 140, 28);
@@ -36,12 +36,6 @@ html {
     box-sizing: border-box;
     margin: 0;
     font-family: 'Montserrat';
-}
-
-a,
-p,
-button {
-    font-size: var(--font-size-text);
 }
 
 h1,
@@ -71,14 +65,7 @@ h2 {
     left: 0;
 }
 
-.header__menu-link {
-    color: var(--color-text-white);
-    font-weight: 500;
-}
-
 /* white-part-section-1 */
-
-
 
 .white-part {
     background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(255, 255, 255, 0.1)), url(../images/897f6845724e4711b48b8d91a599db1d.jpg);
@@ -170,7 +157,6 @@ h2 {
 }
 
 .white-part-section-3__card-wrapper {
-    justify-self: center;
     width: 450px;
     height: 400px;
     border-radius: 0 20px;
@@ -215,8 +201,8 @@ h2 {
 /* white-part-section-4 */
 
 .white-part-section-4 {
-    transition: all 1s;
-    background: linear-gradient(197deg, var(--color-background) 0%, var(--color-background) 40%, var(--color-background07) 70%, rgba(0, 0, 0, .1) 90%);
+    transition: all .7s;
+    background: var(--color-background);
 }
 
 .white-part-section-4__indentation {
@@ -242,8 +228,6 @@ h2 {
 /* black-part */
 
 
-
-
 /* black-part-section1  styles */
 
 .black-part-section1 {
@@ -255,8 +239,6 @@ h2 {
 .black-part-section1__inner {
     padding: 192px 0 0;
 }
-
-
 
 .black-part-section1__square-wrapper {
     max-width: 750px;
@@ -365,9 +347,6 @@ h2 {
     background-color: var(--color-background);
 }
 
-
-
-
 .black-part-section2__inner {
     width: 100%;
     display: grid;
@@ -455,7 +434,7 @@ h2 {
     padding: 200px 0;
 }
 
-.black-part-section3__small-header-wrpapper {
+.black-part-section3__small-header-wrapper {
     margin-bottom: 8px;
 }
 
@@ -483,7 +462,6 @@ h2 {
     line-height: 26px;
     letter-spacing: 0.2px;
 }
-
 
 /* black-part-section4 */
 
@@ -568,10 +546,11 @@ h2 {
     .black-part-section2__inner,
     .white-part-section-3__inner {
         width: 938px;
-        grid-template-areas: 'small-header small-header small-header small-header'
-            'h2 h2 h2 h2'
-            'text text button button'
-            'card1 card2 card3 card4';
+        grid-template-areas:
+            'small-header small-header small-header small-header'
+            'h2           h2           h2           h2'
+            'text         text         button       button'
+            'card1        card2        card3        card4';
     }
 
     .white-part-section-3__card-wrapper,
@@ -616,11 +595,12 @@ h2 {
     .black-part-section2__inner,
     .white-part-section-3__inner {
         width: 730px;
-        grid-template-areas: 'small-header small-header small-header small-header'
-            'h2 h2 h2 h2'
-            'text text text button'
-            'card1 card1 card2 card2'
-            'card3 card3 card4 card4';
+        grid-template-areas:
+            'small-header small-header small-header small-header'
+            'h2           h2           h2           h2'
+            'text         text         text         button'
+            'card1        card1        card2        card2'
+            'card3        card3        card4        card4';
     }
 
     .white-part-section-3__card-wrapper,
@@ -664,22 +644,21 @@ h2 {
         width: calc(100% - 30px);
     }
 
-
     .white-part-section-4__indentation {
         height: 150px;
     }
 
     .black-part-section2__inner,
     .white-part-section-3__inner {
-        grid-template-areas: 'small-header small-header small-header small-header'
-            'h2 h2 h2 h2'
-            'text text text text'
-            'button button button button'
-            'button button button button'
-            'card1 card1 card1 card1'
-            'card2 card2 card2 card2'
-            'card3 card3 card3 card3'
-            'card4 card4 card4 card4';
+        grid-template-areas:
+            'small-header small-header small-header small-header'
+            'h2           h2           h2           h2'
+            'text         text         text         text'
+            'button       button       button       button'
+            'card1        card1        card1        card1'
+            'card2        card2        card2        card2'
+            'card3        card3        card3        card3'
+            'card4        card4        card4        card4';
     }
 
     .white-part-section-3__card-wrapper,
@@ -701,8 +680,6 @@ h2 {
     .black-part-section3__img {
         width: calc(100vw - 30px);
     }
-
-
 }
 
 
@@ -710,10 +687,6 @@ h2 {
 /* modifiers */
 
 
-
-.small-header {
-    font-size: var(--font-size-text);
-}
 
 .text_white {
     color: whitesmoke;
@@ -731,7 +704,7 @@ h2 {
     color: var(--color-text-purple);
 }
 
-.text_500 {
+.font_500 {
     font-weight: 500;
 }
 
